<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">


    <android.support.v7.widget.Toolbar
        android:id="@+id/timeform_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        >

        <TextView
            android:id="@+id/currentDateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"/>

    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.16"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/fromTimeEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/from_time_hint"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/toTimeEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/to_time_hint"
            android:textAlignment="center" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="0.28" />


    <EditText
        android:id="@+id/taskNameEditText"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:ems="10"
        android:hint="@string/task_name_edit"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:layout_marginTop="10dp"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/taskNameScrollLinearLayout">

        </LinearLayout>
    </HorizontalScrollView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="0.27" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginTop="10dp">

        <ImageButton
            android:id="@+id/colorButton"
            android:contentDescription="@string/color_button_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="7dp"
            android:background="@null"
            android:src="@drawable/ball" />

        <EditText
            android:id="@+id/colorTagEditText"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/tag_name_edit"
            android:inputType="textPersonName"
            android:textAlignment="center" />

    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/colorTagLinearLayout">

        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>