<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.ChronometerFragment"
    android:orientation="vertical"
    android:padding="1dp"
    android:background="@android:color/background_light"
    android:id="@+id/chronometerFragment">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/timer_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="@android:color/background_light"
        android:padding="6dp"
        android:text="@string/timer_text_view_empty"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="74sp" />

    <Button
        android:id="@+id/start_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/colorPrimary"
        android:drawableTint="@color/cardview_dark_background"
        android:elevation="2dp"
        android:text="@string/timer_start_button"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp" />

    <TextView
        android:hint="@string/auto_complete_text_view_blank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/taskNameTextView"
        android:background="@android:color/background_light"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@android:color/darker_gray"
        android:textColorLink="?attr/colorBackgroundFloating"
        android:maxLines="1"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:layout_marginTop="48dp"
        android:freezesText="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        />


</RelativeLayout>
